Kubernetes/AllInOne/combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtualisation-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtualisation-app
  template:
    metadata:
      labels:
        app: virtualisation-app
    spec:
      containers:
        - name: react-app-virtualisation
          image: picolas/react-virtualisation
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
        - name: laravel-app-virtualisation
          image: picolas/backendlaravel-virtualisation
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: configlaravel
              mountPath: /var/www/html/BackendLaravel
        - name: mysql-virtualisation
          image: mysql
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
      restartPolicy: Always
      volumes:
        - name: configlaravel
          configMap:
            name: env-config
            items:
              - key: .env
                path: .env

---

apiVersion: v1
kind: Service
metadata:
  name: virtualisation-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: react
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: laravel
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: virtualisation-app
