Kubernetes/AllInOne/mysql_all.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql-virtualisation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-virtualisation
  template:
    metadata:
      labels:
        app: mysql-virtualisation
    spec:
      containers:
        - name: mysql-virtualisation
          image: mysql
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
      restartPolicy: Always

---

kind: Service
apiVersion: v1
metadata:
  name: mysql-virtualisation
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      nodePort: 32002
  selector:
    app: mysql-virtualisation
