Kubernetes/AllInOne/new_combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fullstack-app
  template:
    metadata:
      labels:
        app: fullstack-app
    spec:
      containers:
        - name: react-app
          image: picolas/react-virtualisation
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
        - name: laravel-app
          image: picolas/backendlaravel-virtualisation
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
        - name: mysql
          image: mysql
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 32000
  selector:
    app: fullstack-app
    container: react-app

---

apiVersion: v1
kind: Service
metadata:
  name: laravel-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 32001
  selector:
    app: fullstack-app
    container: laravel-app

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      nodePort: 32002
  selector:
    app: fullstack-app
    container: mysql
