Kubernetes/AllInOne/react_all.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-app-virtualisation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app-virtualisation
  template:
    metadata:
      labels:
        app: react-app-virtualisation
    spec:
      containers:
        - name: react-app-virtualisation
          image: picolas/react-virtualisation
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
      restartPolicy: Always

---

kind: Service
apiVersion: v1
metadata:
  name: react-app-virtualisation
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 32005
  selector:
    app: react-app-virtualisation
